seperation of concerns

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<signup></signup>
+<!-- <reset-password></reset-password> -->
+<!-- <signup></signup> -->
+<!-- <http-pratice></http-pratice> -->
+<app-api></app-api>
