Get the github followers list and show it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <reset-password></reset-password> -->
 <!-- <signup></signup> -->
 <!-- <http-pratice></http-pratice> -->
-<app-api></app-api>
+<!-- <app-api></app-api> -->
+<gitprofile-info></gitprofile-info>
