Archive pages using routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- <signup></signup> -->
 <!-- <http-pratice></http-pratice> -->
 <!-- <app-api></app-api> -->
-<gitprofile-info></gitprofile-info>
+<!-- <gitprofile-info></gitprofile-info> -->
+<router-outlet></router-outlet>
